Implemented dynamic type across all controllers

--- a/Belajar/www/index.html
+++ b/Belajar/www/index.html
@@ -6,11 +6,14 @@
     <title>Belajar</title>
     <link rel="stylesheet" href="css/github-markdown.css">
     <link rel="stylesheet" href="css/style.css">
+    <style>
+        <!-- style -->
+    </style>
 </head>
 <body>
 
 <article class="markdown-body article-text">
-    <!-- placeholder -->
+    <!-- article -->
 </article>
 
 <script src="js/belajar.js"></script>
